[gd_scene load_steps=8 format=3 uid="uid://bf6ifpyxcso0f"]

[ext_resource type="Script" path="res://ik_distance.gd" id="1_qlrk8"]
[ext_resource type="PackedScene" uid="uid://b3kch1ese3obj" path="res://VVVV/vvvv_200502.tscn" id="2_pkdln"]
[ext_resource type="PackedScene" uid="uid://6we2rrmpoola" path="res://vrm_01/vrm_1_vsekai_godot_engine_humanoid_08.glb" id="3_358fa"]
[ext_resource type="AnimationLibrary" uid="uid://bfdex85k21wj2" path="res://ANIM_dance_01.res" id="4_keju8"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ktm35"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_5474b"]
sky_material = SubResource("ProceduralSkyMaterial_ktm35")

[sub_resource type="Environment" id="Environment_fv2wy"]
background_mode = 2
sky = SubResource("Sky_5474b")
tonemap_mode = 2
glow_enabled = true

[node name="Node3D" type="Node3D"]
script = ExtResource("1_qlrk8")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_fv2wy")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="VVVV_200502" parent="." instance=ExtResource("2_pkdln")]
update_secondary_fixed = true
update_in_editor = true

[node name="GeneralSkeleton" parent="VVVV_200502/Armature" index="0"]
bones/0/position = Vector3(0.142211, 0.0267661, 0.00796384)
bones/0/rotation = Quaternion(-0.28226, -0.598382, 0.0354667, 0.749007)
bones/0/scale = Vector3(1, 1, 1)
bones/21/position = Vector3(0.0731263, -0.0284874, -0.00101876)
bones/21/rotation = Quaternion(0.365249, 0.698811, 0.237153, 0.567464)
bones/21/scale = Vector3(1, 1, 1)
bones/22/position = Vector3(0.00965148, 0.278987, 0.0076475)
bones/22/rotation = Quaternion(0.499181, -0.569155, 0.615125, 0.220232)
bones/22/scale = Vector3(1, 1, 1)
bones/23/position = Vector3(-0.00889025, 0.337273, 0.000891945)
bones/23/rotation = Quaternion(0.0766415, 0.990082, -0.11036, 0.0410501)
bones/23/scale = Vector3(1, 1, 1)
bones/33/position = Vector3(-0.07313, -0.028487, -0.00102139)
bones/33/rotation = Quaternion(0.0188209, 0.915042, 0.371015, -0.157138)
bones/33/scale = Vector3(1, 1, 1)
bones/34/position = Vector3(-0.00965254, 0.27899, 0.00764826)
bones/34/rotation = Quaternion(-0.109493, -0.583462, 0.788255, -0.161979)
bones/34/scale = Vector3(1, 1, 1)
bones/35/position = Vector3(0.00889197, 0.337273, 0.000894903)
bones/35/rotation = Quaternion(0.143499, 0.974191, -0.161214, -0.0660991)
bones/35/scale = Vector3(1, 1, 1)
bones/40/position = Vector3(1.03028e-08, 0.112506, 0.0258579)
bones/40/rotation = Quaternion(0.0205406, -0.0684093, -0.167785, 0.983233)
bones/40/scale = Vector3(1, 1, 1)
bones/41/position = Vector3(-9.13857e-09, 0.161971, -0.0285273)
bones/41/rotation = Quaternion(-0.110711, 0.026967, 0.0168861, 0.993343)
bones/41/scale = Vector3(1, 1, 1)
bones/56/position = Vector3(0.045, 0.0170323, 9.31322e-09)
bones/56/rotation = Quaternion(-0.120983, -0.239733, -0.0326583, 0.962717)
bones/56/scale = Vector3(1, 1, 1)
bones/57/position = Vector3(-3.72531e-09, 0.0339932, -0.00833464)
bones/57/rotation = Quaternion(-0.493335, -0.357818, 0.740841, 0.282386)
bones/57/scale = Vector3(1, 1, 1)
bones/58/position = Vector3(0.00010341, 0.176997, 0.00102091)
bones/58/rotation = Quaternion(-0.212127, 0.3856, 0.250669, 0.862253)
bones/58/scale = Vector3(1, 1, 1)
bones/59/position = Vector3(0.000538945, 0.190014, -1.25207e-05)
bones/59/rotation = Quaternion(-0.285212, -0.0686827, -0.127171, 0.947504)
bones/59/scale = Vector3(1, 1, 1)
bones/85/position = Vector3(-3.64671e-08, 0.0395337, -0.000972135)
bones/85/rotation = Quaternion(-0.0311606, -0.30656, -0.0190162, 0.951151)
bones/85/scale = Vector3(1, 1, 1)
bones/86/position = Vector3(1.90339e-08, 0.0563413, 0.0135837)
bones/86/rotation = Quaternion(-0.0768057, 0.342097, 0.0489551, 0.93524)
bones/86/scale = Vector3(1, 1, 1)
bones/165/position = Vector3(-0.0450001, 0.0170305, 5.58793e-09)
bones/165/rotation = Quaternion(0.131264, -0.725635, 0.254413, 0.625698)
bones/165/scale = Vector3(1, 1, 1)
bones/166/position = Vector3(-1.15484e-07, 0.0340878, -0.00793862)
bones/166/rotation = Quaternion(0.772745, -0.426556, -0.245599, 0.400744)
bones/166/scale = Vector3(1, 1, 1)
bones/167/position = Vector3(-0.000102334, 0.176997, 0.00102484)
bones/167/rotation = Quaternion(-0.385382, -0.72853, -0.218969, 0.522281)
bones/167/scale = Vector3(1, 1, 1)
bones/168/position = Vector3(-0.000538349, 0.190013, -1.11684e-05)
bones/168/rotation = Quaternion(-0.296432, 0.439891, 0.354297, 0.770128)
bones/168/scale = Vector3(1, 1, 1)
bones/201/position = Vector3(-0.0552403, -0.037134, 0.000415185)
bones/201/rotation = Quaternion(-0.0191656, -0.0147052, -0.003861, 0.999701)
bones/201/scale = Vector3(1, 1, 1)

[node name="Body (Headless)" parent="VVVV_200502/Armature/GeneralSkeleton" index="1"]
visible = false

[node name="g_vvvv_arm" parent="VVVV_200502/Armature/GeneralSkeleton" index="2"]
visible = false

[node name="ManyBoneIK3D" type="ManyBoneIK3D" parent="VVVV_200502/Armature/GeneralSkeleton" index="3"]
process_priority = 1
process_thread_group = 2
process_thread_group_order = 100
process_thread_messages = 2
pin_count = 11
pins/0/bone_name = "Hips"
pins/0/target_node = NodePath("Hips")
pins/0/passthrough_factor = 0.0
pins/0/weight = 1.0
pins/0/direction_priorities = Vector3(0.2, 0, 0.2)
pins/1/bone_name = "Spine"
pins/1/target_node = NodePath("Spine")
pins/1/passthrough_factor = 1.0
pins/1/weight = 1.0
pins/1/direction_priorities = Vector3(0.2, 0, 0.2)
pins/2/bone_name = "LeftUpperArm"
pins/2/target_node = NodePath("LeftUpperArm")
pins/2/passthrough_factor = 1.0
pins/2/weight = 1.0
pins/2/direction_priorities = Vector3(0.2, 0, 0.2)
pins/3/bone_name = "LeftHand"
pins/3/target_node = NodePath("LeftHand")
pins/3/passthrough_factor = 1.0
pins/3/weight = 1.0
pins/3/direction_priorities = Vector3(0.2, 0, 0.2)
pins/4/bone_name = "RightUpperArm"
pins/4/target_node = NodePath("RightUpperArm")
pins/4/passthrough_factor = 1.0
pins/4/weight = 1.0
pins/4/direction_priorities = Vector3(0.2, 0, 0.2)
pins/5/bone_name = "RightHand"
pins/5/target_node = NodePath("RightHand")
pins/5/passthrough_factor = 1.0
pins/5/weight = 1.0
pins/5/direction_priorities = Vector3(0.2, 0, 0.2)
pins/6/bone_name = "LeftLowerLeg"
pins/6/target_node = NodePath("LeftLowerLeg")
pins/6/passthrough_factor = 1.0
pins/6/weight = 1.0
pins/6/direction_priorities = Vector3(0.2, 0, 0.2)
pins/7/bone_name = "RightLowerLeg"
pins/7/target_node = NodePath("RightLowerLeg")
pins/7/passthrough_factor = 1.0
pins/7/weight = 1.0
pins/7/direction_priorities = Vector3(0.2, 0, 0.2)
pins/8/bone_name = "LeftFoot"
pins/8/target_node = NodePath("LeftFoot2")
pins/8/passthrough_factor = 1.0
pins/8/weight = 1.0
pins/8/direction_priorities = Vector3(0.2, 0, 0.2)
pins/9/bone_name = "RightFoot"
pins/9/target_node = NodePath("RightFoot2")
pins/9/passthrough_factor = 1.0
pins/9/weight = 1.0
pins/9/direction_priorities = Vector3(0.2, 0, 0.2)
pins/10/bone_name = "Head"
pins/10/target_node = NodePath("Head")
pins/10/passthrough_factor = 1.0
pins/10/weight = 1.0
pins/10/direction_priorities = Vector3(0.2, 0, 0.2)

[node name="Hips" type="BoneAttachment3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D"]
transform = Transform3D(0.25904, 0.59816, -0.684199, 0.412491, 0.55656, 0.642742, 0.85693, -0.502474, -0.114851, 0.0868941, -0.0111, 0.0115494)
bone_name = "Hips"
bone_idx = 1
use_external_skeleton = true
external_skeleton = NodePath("../../../../../vrm_1_vsekai_godot_engine_humanoid_08/Root/GeneralSkeleton")

[node name="Marker3D" type="Marker3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D/Hips"]
gizmo_extents = 0.05

[node name="Spine" type="BoneAttachment3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D"]
transform = Transform3D(0.0108285, 0.110033, -0.93851, 0.136419, 0.928557, 0.11044, 0.989459, -0.144706, -0.00554925, 0.14886, 0.0465561, -0.0405037)
bone_name = "Spine"
bone_idx = 2
use_external_skeleton = true
external_skeleton = NodePath("../../../../../vrm_1_vsekai_godot_engine_humanoid_08/Root/GeneralSkeleton")

[node name="Marker3D" type="Marker3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D/Spine"]
gizmo_extents = 0.05

[node name="LeftUpperArm" type="BoneAttachment3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D"]
transform = Transform3D(0.93932, 0.0994478, -0.0285139, 0.0769529, -0.845715, -0.414572, -0.0731702, 0.433606, -0.898127, 0.231092, 0.281278, -0.0168496)
bone_name = "LeftUpperArm"
bone_idx = 10
use_external_skeleton = true
external_skeleton = NodePath("../../../../../vrm_1_vsekai_godot_engine_humanoid_08/Root/GeneralSkeleton")

[node name="Marker3D" type="Marker3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D/LeftUpperArm"]
gizmo_extents = 0.05

[node name="LeftHand" type="BoneAttachment3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D"]
transform = Transform3D(0.767783, -0.454483, 0.311415, 0.117218, -0.38717, -0.85404, 0.569657, 0.775141, -0.273216, 0.159871, -0.00733499, 0.133264)
bone_name = "LeftHand"
bone_idx = 12
use_external_skeleton = true
external_skeleton = NodePath("../../../../../vrm_1_vsekai_godot_engine_humanoid_08/Root/GeneralSkeleton")

[node name="Marker3D" type="Marker3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D/LeftHand"]
gizmo_extents = 0.05

[node name="RightUpperArm" type="BoneAttachment3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D"]
transform = Transform3D(-0.823073, -0.0820192, 0.457, -0.061969, -0.902411, -0.273567, 0.486929, -0.28385, 0.826032, 0.201985, 0.269101, -0.147925)
bone_name = "RightUpperArm"
bone_idx = 29
use_external_skeleton = true
external_skeleton = NodePath("../../../../../vrm_1_vsekai_godot_engine_humanoid_08/Root/GeneralSkeleton")

[node name="Marker3D" type="Marker3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D/RightUpperArm"]
gizmo_extents = 0.05

[node name="RightHand" type="BoneAttachment3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D"]
transform = Transform3D(-0.2319, -0.913013, 0.0751913, 0.0854751, -0.0987883, -0.935927, 0.965194, -0.235844, 0.113042, 0.0701188, -0.0145579, -0.159539)
bone_name = "RightHand"
bone_idx = 31
use_external_skeleton = true
external_skeleton = NodePath("../../../../../vrm_1_vsekai_godot_engine_humanoid_08/Root/GeneralSkeleton")

[node name="Marker3D" type="Marker3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D/RightHand"]
gizmo_extents = 0.05

[node name="LeftLowerLeg" type="BoneAttachment3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D"]
transform = Transform3D(0.19014, -0.727212, 0.572743, -0.187452, -0.602835, -0.70319, 0.959254, 0.0294984, -0.281, -0.0390028, 0.222578, 0.0774691)
bone_name = "LeftLowerLeg"
bone_idx = 48
use_external_skeleton = true
external_skeleton = NodePath("../../../../../vrm_1_vsekai_godot_engine_humanoid_08/Root/GeneralSkeleton")

[node name="Marker3D" type="Marker3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D/LeftLowerLeg"]
gizmo_extents = 0.05

[node name="RightLowerLeg" type="BoneAttachment3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D"]
transform = Transform3D(0.263199, -0.718636, 0.554359, 0.133609, -0.540232, -0.763756, 0.949968, 0.30804, -0.0517034, -0.0655699, 0.193796, -0.0706539)
bone_name = "RightLowerLeg"
bone_idx = 52
use_external_skeleton = true
external_skeleton = NodePath("../../../../../vrm_1_vsekai_godot_engine_humanoid_08/Root/GeneralSkeleton")

[node name="Marker3D" type="Marker3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D/RightLowerLeg"]
gizmo_extents = 0.05

[node name="LeftFoot2" type="BoneAttachment3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D"]
transform = Transform3D(-0.217231, -0.856698, -0.334521, 0.234699, -0.383984, 0.830962, -0.940997, 0.114217, 0.318557, -0.23864, 0.0570857, 0.0855672)
bone_name = "LeftFoot"
bone_idx = 49
use_external_skeleton = true
external_skeleton = NodePath("../../../../../vrm_1_vsekai_godot_engine_humanoid_08/Root/GeneralSkeleton")

[node name="Marker3D" type="Marker3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D/LeftFoot2"]
gizmo_extents = 0.05

[node name="RightFoot2" type="BoneAttachment3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D"]
transform = Transform3D(-0.56844, -0.702642, -0.276033, -0.363301, -0.0482757, 0.871038, -0.700264, 0.666741, -0.25512, -0.262852, 0.0454902, 0.0139102)
bone_name = "RightFoot"
bone_idx = 53
use_external_skeleton = true
external_skeleton = NodePath("../../../../../vrm_1_vsekai_godot_engine_humanoid_08/Root/GeneralSkeleton")

[node name="Marker3D" type="Marker3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D/RightFoot2"]
gizmo_extents = 0.05

[node name="Head" type="BoneAttachment3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D"]
transform = Transform3D(0.141267, 0.393312, -0.847569, 0.122306, 0.842043, 0.411133, 0.980256, -0.181117, 0.079335, 0.238579, 0.363852, -0.106535)
bone_name = "Head"
bone_idx = 5
use_external_skeleton = true
external_skeleton = NodePath("../../../../../vrm_1_vsekai_godot_engine_humanoid_08/Root/GeneralSkeleton")

[node name="Marker3D" type="Marker3D" parent="VVVV_200502/Armature/GeneralSkeleton/ManyBoneIK3D/Head"]
gizmo_extents = 0.05

[node name="Head" parent="VVVV_200502/Armature/GeneralSkeleton" index="4"]
transform = Transform3D(0.146419, 0.686192, -0.712532, 0.118344, 0.702971, 0.701303, 0.982118, -0.187008, 0.0217219, 0.215893, 0.319072, -0.0917537)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.998535, 0.0159553, -0.0517096, 0, 0.955547, 0.29484, 0.0541152, -0.294408, 0.954147, 0.176118, 1.21459, 1.48047)

[node name="vrm_1_vsekai_godot_engine_humanoid_08" parent="." instance=ExtResource("3_358fa")]

[node name="GeneralSkeleton" parent="vrm_1_vsekai_godot_engine_humanoid_08/Root" index="0"]
transform = Transform3D(0.945, 0, 0, 0, 0.945, 0, 0, 0, 1, 0, 0, 0)
motion_scale = 0.65
bones/0/rotation = Quaternion(-3.55271e-15, 3.55271e-15, -9.12032e-23, 1)
bones/0/scale = Vector3(1, 1, 1)
bones/1/position = Vector3(0.0919514, -0.011746, 0.0115494)
bones/1/rotation = Quaternion(-0.447218, -0.597848, -0.0742985, 0.661101)
bones/1/scale = Vector3(1, 1, 1)
bones/2/rotation = Quaternion(0.312154, -0.0545295, -0.200003, 0.927138)
bones/3/rotation = Quaternion(-0.112355, 0.10559, 0.00221277, 0.98804)
bones/3/scale = Vector3(1, 1, 1)
bones/4/rotation = Quaternion(0.029372, -0.0110508, 0.0500729, 0.998252)
bones/4/scale = Vector3(1, 1, 1)
bones/5/rotation = Quaternion(-0.0769783, -0.0239746, -0.0473058, 0.995621)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(0.707144, -3.70043e-05, 3.69911e-05, 0.70707)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(0.707144, 3.6997e-05, -3.70115e-05, 0.70707)
bones/7/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(0.546299, 0.439969, 0.52116, -0.486186)
bones/9/scale = Vector3(1, 1, 1)
bones/10/rotation = Quaternion(-0.0420944, 0.835256, -0.498824, -0.227485)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(0.198445, -0.507672, 0.297809, 0.783709)
bones/11/scale = Vector3(1, 1, 1)
bones/12/rotation = Quaternion(-0.260242, 0.786919, 0.0454007, 0.557648)
bones/12/scale = Vector3(1, 1, 1)
bones/13/rotation = Quaternion(-0.00885108, 0.717193, 0.274849, 0.640324)
bones/13/scale = Vector3(1, 0.998785, 0.998785)
bones/14/rotation = Quaternion(0.017582, -0.00942101, -0.000794999, 0.999801)
bones/14/scale = Vector3(1, 1, 1)
bones/15/rotation = Quaternion(0.00202704, -0.010227, -0.000862994, 0.999945)
bones/15/scale = Vector3(1, 1, 1)
bones/16/rotation = Quaternion(0.191329, 0.0055518, -0.0197974, 0.981311)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(0.159777, -0.0167508, -0.00614977, 0.986992)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(0.169758, -0.0156879, -0.00575944, 0.985344)
bones/19/rotation = Quaternion(0.00260889, -0.0171095, -0.00357604, 0.999844)
bones/20/rotation = Quaternion(0.00209263, -0.0116673, -0.00527785, 0.999916)
bones/21/rotation = Quaternion(0.00209106, -0.0116674, -0.00527788, 0.999916)
bones/21/scale = Vector3(1, 1, 1)
bones/22/rotation = Quaternion(-0.00441281, -0.00132278, -0.00209808, 0.999987)
bones/22/scale = Vector3(1, 1, 1)
bones/23/rotation = Quaternion(-0.0127023, -0.0039221, -0.0011405, 0.999911)
bones/23/scale = Vector3(1, 1, 1)
bones/24/rotation = Quaternion(-0.0029134, -0.00381043, -0.00110854, 0.999988)
bones/25/rotation = Quaternion(-0.00277758, 0.0019726, -0.00862011, 0.999957)
bones/25/scale = Vector3(1, 1, 1)
bones/26/rotation = Quaternion(-0.000813113, 0.0157488, 0.00454893, 0.999865)
bones/26/scale = Vector3(1, 1, 1)
bones/27/rotation = Quaternion(-0.00081312, 0.0157488, 0.00454895, 0.999865)
bones/27/scale = Vector3(1, 1, 1)
bones/28/rotation = Quaternion(0.54136, -0.447597, -0.52854, -0.476688)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(0.00913096, 0.82958, -0.488593, 0.270169)
bones/29/scale = Vector3(1, 1, 1)
bones/30/rotation = Quaternion(0.254869, 0.433956, -0.385856, 0.773201)
bones/30/scale = Vector3(1, 1, 1)
bones/31/rotation = Quaternion(-0.355799, -0.76723, -0.142955, 0.51413)
bones/31/scale = Vector3(1, 1, 1)
bones/32/rotation = Quaternion(-0.00857249, -0.717247, -0.274773, 0.6403)
bones/32/scale = Vector3(1, 0.998785, 0.998785)
bones/33/rotation = Quaternion(0.0176168, 0.0093481, 0.000785573, 0.999801)
bones/33/scale = Vector3(1, 1, 1)
bones/34/rotation = Quaternion(0.00236504, 0.0101312, 0.000850614, 0.999946)
bones/34/scale = Vector3(1, 1, 1)
bones/35/rotation = Quaternion(0.214586, -0.0113091, 0.0196038, 0.976443)
bones/35/scale = Vector3(1, 1, 1)
bones/36/rotation = Quaternion(0.180285, 0.0145642, 0.00534741, 0.983492)
bones/36/scale = Vector3(1, 1, 1)
bones/37/rotation = Quaternion(0.191043, 0.013411, 0.00492354, 0.981478)
bones/37/scale = Vector3(1, 1, 1)
bones/38/rotation = Quaternion(-0.0161891, 0.0187605, 0.00465185, 0.999682)
bones/38/scale = Vector3(1, 1, 1)
bones/39/rotation = Quaternion(-0.0123606, 0.0121807, 0.00549881, 0.999834)
bones/39/scale = Vector3(1, 1, 1)
bones/40/rotation = Quaternion(-0.0123606, 0.0121807, 0.0054988, 0.999834)
bones/40/scale = Vector3(1, 1, 1)
bones/41/rotation = Quaternion(-0.00213031, 0.00145549, 0.00193294, 0.999995)
bones/41/scale = Vector3(1, 1, 1)
bones/42/rotation = Quaternion(-0.0107884, 0.00389635, 0.00113393, 0.999934)
bones/42/scale = Vector3(1, 1, 1)
bones/43/rotation = Quaternion(-0.000162176, 0.00377543, 0.00109892, 0.999992)
bones/44/rotation = Quaternion(0.0626893, 0.00581988, 0.000259403, 0.998016)
bones/44/scale = Vector3(1, 1, 1)
bones/45/rotation = Quaternion(0.0583585, -0.0129025, -0.00372773, 0.998205)
bones/45/scale = Vector3(1, 1, 1)
bones/46/rotation = Quaternion(0.0583585, -0.0129025, -0.00372774, 0.998205)
bones/46/scale = Vector3(1, 1, 1)
bones/47/rotation = Quaternion(0.228647, 0.675648, 0.700518, -0.0222452)
bones/47/scale = Vector3(1, 1, 1)
bones/48/rotation = Quaternion(0.0551569, 0.71099, -0.694271, 0.0971523)
bones/48/scale = Vector3(1, 1, 1)
bones/49/rotation = Quaternion(-0.000388047, 0.98954, -0.141054, 0.030225)
bones/49/scale = Vector3(1, 1, 1)
bones/50/rotation = Quaternion(-1.17227e-08, 0.996371, 0.085113, 7.41436e-09)
bones/50/scale = Vector3(1, 1, 1)
bones/51/rotation = Quaternion(0.0551949, 0.725999, 0.685187, 0.0199237)
bones/51/scale = Vector3(1, 1, 1)
bones/52/rotation = Quaternion(-0.0282374, 0.722112, -0.684138, 0.0985498)
bones/53/rotation = Quaternion(0.232367, 0.947398, -0.214469, -0.049462)
bones/53/scale = Vector3(1, 1, 1)
bones/54/rotation = Quaternion(1.32762e-08, 0.999998, 0.00193561, -1.16487e-09)
bones/54/scale = Vector3(1, 1, 1)

[node name="AnimationPlayer" parent="vrm_1_vsekai_godot_engine_humanoid_08" index="1"]
libraries = {
"ANIM_dance_01": ExtResource("4_keju8")
}
autoplay = "ANIM_dance_01/ANIM_mocap_lyuma_ANIM_mocap_lyuma_08"

[editable path="VVVV_200502"]
[editable path="vrm_1_vsekai_godot_engine_humanoid_08"]
